<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="25sp"
    tools:context=".ui.gallery.GalleryFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="1dp"
        android:text="@string/efectue_uma_nova_requisi_ao"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtJuri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtAno"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="75dp"
        android:ems="10"
        android:hint="@string/Ano"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtBilheteDeIdentidade"
        app:layout_constraintEnd_toStartOf="@+id/txtClasse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtClasse"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtJuri"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:hint="@string/Juri"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtBilheteDeIdentidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtClasse"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtClasse"
        android:layout_width="106dp"
        android:layout_height="48dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Classe"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtBilheteDeIdentidade"
        app:layout_constraintEnd_toStartOf="@+id/txtJuri"
        app:layout_constraintStart_toEndOf="@+id/txtAno"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/txtMessagem"
        android:layout_width="345dp"
        android:layout_height="172dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/Messagem"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEnviarPedido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBilheteDeIdentidade"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtBilheteDeIdentidade"
        android:layout_width="358dp"
        android:layout_height="55dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/BI"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtMessagem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtJuri"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnEnviarPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="113dp"
        android:text="@string/Enviar_Pedido"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMessagem"
        tools:ignore="VisualLintButtonSize" />
</androidx.constraintlayout.widget.ConstraintLayout>